# tex-macros

./: .gitignore  README.md  README.txt  banner-fig-tikz.tex  basic-flow-chart-tikz.tex  complex-fig-tikz.tex  complex-flow-chart-tikz.tex  curve-plot-tikz.tex  energy-change-graph-tikz.tex  init_notes.md  init_notes.txt  mkgraph  mksfield  mktex  mkts  mytex  plot-shaded-tikz.tex  self-loops-dot-graph-tikz.tex  simple-dot-graph-tikz.tex
archive/: README.md
class/: README.md  arteacle.cls  lettear.cls  teamer.cls
examples/: README.md  atom-fig-tikz.tex  attack-chain.tex  calibration-curve-graph-tikz.tex  causal-dag-extended.tex  causal-dag.tex  circle-fig-tikz.tex  circle-flow-chart-tikz.tex  cite.txt  cluster-subet.tex  cluster.tex  confusion-matrix.tex  decision-tree.tex  double-plot-tikz.tex  droplet-fig-tikz.tex  experimental-trial.tex  flower-dot-graph-tikz.tex  letter_formal_no_sig.tex  letter_normal_no_sig.tex  likert.tex  plot-sigmoid.tex  real-data-graph-tikz.tex  simple-dot-graph-tikz.tex  simple-dot-graph.dot  simple-graph-tikz.tex  tm.tex  venn.tex
general_macros/: chemical.sty  code_format.sty  figures.sty  footnotes.sty  general_typesetting.sty  general_typesetting_letter.sty  hyperlinks_and_references.sty  hyperlinks_and_references_cite.sty  hyperlinks_and_references_cite_numeric.sty  lists.sty  mathematical.sty  miscellaneous.sty  miscellaneous_letter.sty  table_of_x_multicol.sty  tables.sty
tools/mktex.rs/: Cargo.toml  README.md  compile.sh
tools/mktex.rs/src/: config.rs  file.rs  freeze.rs  main.rs  remote.rs  resource.rs  sync.rs  texmf.rs
(+113 files in other folders)
